productlist doesn't work
