# api/controllers/Product.js
@@ -39,18 +39,18 @@ module.exports.findProductById = function findProductById (req, res, next) {
 module.exports.getAllProducts = function getAllProducts (req, res, next) {
   var offset = req.swagger.params['offset'].value;
   var limit = req.swagger.params['limit'].value;
-  var isPromotion = req.swagger.params['isPromotion'].value;
   var sort = req.swagger.params['sort'].value;
   var sort_col = req.swagger.params['sort_col'].value;
-  Product.getAllProducts(offset,limit,isPromotion,sort,sort_col)
+  var search_txt = req.swagger.params['search_txt'].value;
+  var search_col = req.swagger.params['search_col'].value;
+  Product.getAllProducts(offset,limit,sort,sort_col,search_txt,search_col)
     .then(function (response) {
-        res.setHeader("X-total-records", response.total);
-        utils.writeJson(res, response.body);            })
+      utils.writeJson(res, response);
+    })
     .catch(function (response) {
       utils.writeJson(res, response);
     });
 };
-
 
 module.exports.updateProductById = function updateProductById (req, res, next) {
   var id = req.swagger.params['id'].value;
